CHANGES IN VERSION 0.9.0
-------------------------
 o changed HDMSe/MSe naming convention 
   to identification/quantitation <2012-06-06 Wed>

CHANGES IN VERSION 0.8.14
-------------------------
 o Updated package title <2012-06-05 Tue>
 o removed PLGS vignette <2012-06-06 Wed>

CHANGES IN VERSION 0.8.13
-------------------------
 o more vignette work <2012-06-01 Fri>
 o added pgfSweave and xtable to Suggests 
   and loaded in vignette <2012-06-01 Fri>

CHANGES IN VERSION 0.8.12
-------------------------
 o updated show MasterPeptides to reflect number of files 
   effectively used <2012-05-28 Mon>
 o moved MasterFdrResults to S4 framework <2012-05-30 Wed>
 o MSnbase is now a dependency <2012-05-30 Wed>
 o vignette updates <2012-05-30 Wed>
 o synergise now calls filterUniqueDbPeptides even if master, 
   as opposed to filterUniqueMSeDbPeptides <2012-05-30 Wed>
 o fixes as(, "MSnSet") - peptides sequences are now 
   properly made unique <2012-05-30 Wed>

CHANGES IN VERSION 0.8.11
-------------------------
 o Automatic handling of Masterpeptides objects <2012-05-23 Wed>
 o Various man updated to describe the above <2012-05-23 Wed>
 o Now adding vignettes to windows vignette menu <2012-05-23 Wed>
 o fixed/improved writeMasterPeptides and fixed [tk_]choose.dir 
   in synergise <2012-05-23 Wed>
 o MasterPeptides must be save as 'rds' with saveRDS to be 
   reusable in synergise/Synapter <2012-05-23 Wed>

CHANGES IN VERSION 0.8.10
-------------------------
 o updated master-related function names by removing 
   explicit reference to HDMSe <2012-05-16 Wed>
 o new AllGenerics.R and AllClasses.R files <2012-05-16 Wed>
 o removed selection param to makeMaster <2012-05-16 Wed>
 o new makeMaster returns an instance of class 
   'MasterPeptides' <2012-05-16 Wed>

CHANGES IN VERSION 0.8.9
------------------------
 o new synergise verbose parameter <2012-05-11 Fri>
 o filterUnique[HDMSe|MSe]DbPeptides new verbose param <2012-05-11 Fri>