@@ -1,7 +1,9 @@
 CHANGES IN VERSION 0.9.0
 -------------------------
+ o moved repo to github <2012-06-06 Wed>
  o changed HDMSe/MSe naming convention 
    to identification/quantitation <2012-06-06 Wed>
+ o second round of naming changes (utils) <2012-06-07 Thu>
 
 CHANGES IN VERSION 0.8.14
 -------------------------
